Hide the blog page from mobile and desktop preview

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -74,6 +74,11 @@ body {
   color: black;
 }
 
+/* Hide blog link from navigation */
+.nav-links a.blog-link {
+  display: none;
+}
+
 .auth-buttons {
   display: flex;
   align-items: center;
