--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -228,3 +228,51 @@ body {
     display: flex;
   }
 }
+
+/* Organiser Auth Image Buttons */
+.organiser-auth-btns {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav-img-btn {
+  width: auto;
+  cursor: pointer;
+  transition: opacity 0.2s ease, transform 0.1s;
+}
+
+/* Login Text Button Styles */
+.login-link {
+  text-decoration: none;
+  /* Remove underline from link */
+}
+
+.login-text-btn {
+  width: 128px;
+  height: 26px;
+
+  font-family: "SF Pro", sans-serif;
+  font-weight: 600;
+  /* approximating 590/Semibold */
+  font-style: normal;
+  font-size: 20px;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #000000;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.start-img-btn {
+  height: 48px;
+  /* Button height */
+}
+
+.nav-img-btn:hover {
+  opacity: 0.9;
+  transform: translateY(-1px);
+}
