--- a/src/Page3.css
+++ b/src/Page3.css
@@ -118,8 +118,13 @@
   }
 
   .page3-laptop-image {
-    width: 100%;
-    max-width: 600px;
+    width: calc(100% + 40px);
+    max-width: none;
+    margin-left: -20px;
+    margin-right: -20px;
+    transform: scale(1.3);
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
@@ -127,5 +132,19 @@
   .page3-heading {
     font-size: 32px;
     line-height: 40px;
+    text-align: center;
+  }
+
+  .page3-subtext {
+    text-align: center;
+  }
+
+  .page3-laptop-image {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    margin: 20px auto 30px auto;
+    transform: scale(1.6);
+    display: block;
   }
 }
