--- a/src/Page6.css
+++ b/src/Page6.css
@@ -3,7 +3,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding-top: 50px; /* Adjust as needed */
+  padding-top: 50px;
+  /* Adjust as needed */
   background-color: #fff;
   font-family: "SF Pro Display", "Poppins", sans-serif;
 }
@@ -113,7 +114,7 @@
 @media (max-width: 980px) {
   .page6-section {
     height: auto;
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 30px;
   }
 
